--- a/project.json
+++ b/project.json
@@ -1,27 +1,28 @@
 {
-  "version": "1.0.0-*",
-  "buildOptions": {
-    "debugType": "portable",
-    "emitEntryPoint": true,
-    "compilerName": "fsc",
-    "compile": {
-      "includeFiles": [
-        "Program.fs"
-      ]
+    "version": "0.1.0-*",
+    "buildOptions": {
+        "debugType": "portable",
+        "emitEntryPoint": true,
+        "compilerName": "fsc",
+        "compile": {
+            "includeFiles": [
+                "src/Urk/ast.fs",
+                "src/Urk/parser.fs"
+            ]
+        }
+    },
+    "tools": {
+        "dotnet-compile-fsc": "1.0.0-preview2.1-*"
+    },
+    "frameworks": {
+        "netcoreapp1.1": {
+            "dependencies": {
+                "Microsoft.NETCore.App": {
+                    "type": "platform",
+                    "version": "1.1.0"
+                },
+                "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-160629"
+            }
+        }
     }
-  },
-  "tools": {
-    "dotnet-compile-fsc": "1.0.0-preview2.1-*"
-  },
-  "frameworks": {
-    "netcoreapp1.1": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.1.0"
-        },
-        "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-160629"
-      }
-    }
-  }
 }
