add Project file and install FParsec Argu

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@
 *~
 \#*#
 
+# Build result directory
+bin/
+obj/
+
+# MonoDevelop config files
+*.userprefs
+
 # Nuget package directory
 packages/
