--- a/urk.console/urk.console.fsproj
+++ b/urk.console/urk.console.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -54,10 +54,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="main.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
-    <Compile Include="cli.fs" />
+    <Compile Include="Urk/cli.fs" />
+    <Compile Include="Urk/main.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Argu">
